# happyrobo

./: .gitignore  CODE_ANALYSIS_SUMMARY.md  COMPLETE_USAGE_GUIDE.md  JETSON_NANO_BUILD_GUIDE.md  JETSON_NANO_COMPILE_COMMANDS.sh  JETSON_NANO_QUICKSTART.md  QUICK_COMPILE_GUIDE.md  README.md  README_COMPILE.md  README_FINAL.md  robot_control_ui.py  setup_jetson_nano.sh  web_control_ui.py
happy_ws/: cmd.txt  happy_ws.code-workspace
happy_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
happy_ws/logs/cartographer/: build.make.060.log.stderr  build.make.062.log.stderr
happy_ws/logs/cartographer_ros/: build.cmake.000.log.stderr  build.cmake.002.log.stderr
happy_ws/logs/cyglidar_d2_ros1/: build.cmake.003.log.stderr
happy_ws/logs/happy_robo/: build.check.057.log.stderr  build.check.059.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.013.log.stderr  build.make.017.log.stderr  build.make.023.log.stderr  build.make.028.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.035.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.051.log.stderr  build.make.054.log.stderr  build.make.057.log.stderr  build.make.058.log.stderr  build.make.060.log.stderr  build.make.061.log.stderr  build.make.062.log.stderr  build.make.063.log.stderr  build.make.064.log.stderr  build.make.066.log.stderr  (+49 more)
happy_ws/src/happy_robot/: .gitignore  CMakeLists.txt  README.md  build_cmd.txt  frames.gv  install.txt  소방로봇.txt  소방로봇_2025.01.26.txt
happy_ws/src/happy_robot/WoorobotSDK/: CMakeLists.txt  pyproject.toml
happy_ws/src/happy_robot/WoorobotSDK/example/cpp/: config.cpp  main.cpp
happy_ws/src/happy_robot/WoorobotSDK/example/python/: config.py  main.py
happy_ws/src/happy_robot/WoorobotSDK/include/: SerialPortConnector.h
happy_ws/src/happy_robot/WoorobotSDK/woorobot_sdk_cpp/: BoardConfig.h  Controller.cpp  Firmware.cpp  Firmware.h  MainCommConfig.cpp  MainCommConfig.h  MotorConfig.cpp  MotorConfig.h  MotorControl.cpp  MotorControl.h  MotorGain.cpp  MotorGain.h  MotorLimit.cpp  MotorLimit.h  MotorParam.cpp  MotorParam.h  MotorStatus.cpp  MotorStatus.h  SerialPortConnector.cpp
happy_ws/src/happy_robot/WoorobotSDK/woorobot_sdk_python/: bindings.cpp
happy_ws/src/happy_robot/config/: controllers.yaml  sim_pid_gains.yaml
happy_ws/src/happy_robot/control/config/: hardware_interface.yaml  robot_localization.yaml
happy_ws/src/happy_robot/klp_detection/: klp_detection.py  klp_detection_cam.py  klp_detection_pub.py
happy_ws/src/happy_robot/launch/: bag.launch  cyglidar_monitor.launch  cyglidar_monitor_all.launch  cyglidar_node.launch  gmapping_demo.launch  happy.launch  imu_test.launch  obb_test.launch  parking.launch  run.launch  sim_only_park.launch  sim_park.launch  sim_swerve.launch
happy_ws/src/happy_robot/launch/include/: cartographer_real.launch  gmapping.launch  gmapping.rviz  gmapping_real.launch  move_base.launch  move_base_real.launch  only_obb.rviz  parking_move_base.launch  real.rviz  run.rviz  swerve.rviz
happy_ws/src/happy_robot/lua/: prev.lua
happy_ws/src/happy_robot/maps/: map.pgm  map.yaml  map2.yaml  map_new.pgm  map_new.yaml
happy_ws/src/happy_robot/params/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_real.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_real.yaml  move_base_params.yaml
happy_ws/src/happy_robot/params/map_nav_params/: local_costmap_params.yaml
happy_ws/src/happy_robot/script/: clear_sig_pub.py  custom_path_planner.py  frames.gv  master_node.py  master_node_prev.py  master_node_sim.py  mode_converter.py  mpu9250_test.py  obb_cal.py  obb_calculator.py  obb_impl_align.py  odom_test.py  record_rosbag.py  send_run_mode.py  ttytest.py  usb_serial_sub.py  viz_cmd_vel.py
happy_ws/src/happy_robot/src/: async_scan_merger.cpp  async_scan_merger_real.cpp  async_scan_merger_real_2d.cpp  async_scan_merger_real_3d.cpp  conversion.cpp  dynamic_map_publisher.cpp  encoder_sub_node.cpp  filter_pcd.cpp  imu_receiver.cpp  liner.cpp  merger.cpp  odom_publisher.cpp  scout_skid_steer.cpp  sim_odom.cpp  sim_vel_converter.cpp  sim_vel_converter_prev.cpp  vel_converter.cpp  vel_converter_sdk.cpp
happy_ws/src/happy_robot/src/control/: happy_joint_state_publisher.cpp
happy_ws/src/happy_robot/urdf/: happy_robo.urdf.xacro  new_swerve.urdf.xacro  no_0_swerve.urdf.xacro  real.urdf.xacro  real_prev.urdf.xacro
happy_ws/src/happy_robot/worlds/: 250206.world  demo3.world  demo_250206.world  demo_parking.world  new.world  obb2.world  obb3.world  obb4.world  obb5.world  obb_block.world  only_obb.world  only_park.world  park_base.world  parking1.world  parking2.world  parking_demo.world  parking_demo2.world  parking_demo3.world  parking_demo_aligned.world  parking_demo_landing.world  parking_demo_non_aligned.world  parking_lot2.world  parking_test.world  swerve_world.world
imu_ws/devel/: .catkin  setup.sh
(+353 files in other folders)
